examples/test/testpolicy14405.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14405
  namespace: namespace207
spec:
  podSelector:
    matchLabels:
      key19: value1
      key10: value2
      key34: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value39
          key0: value7
      podSelector:
        matchLabels:
          key36: value21
          key46: value40
